--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint-plugin-react": "^7.14.3",
     "jest": "^23.3.0",
     "jest-cli": "^23.3.0",
-    "jest-extended": "^0.11.2"
+    "jest-extended": "^0.11.2",
+    "mem": "^4.0.0"
   },
   "engines": {
     "node": ">= 8.x.x"
